2004-01-07  Alexander Larsson  <alexl@redhat.com>

	* bonobo/bonobo-ui-sync-status.c (impl_bonobo_ui_sync_status_build): 
	Handle the pack-start behaviour attribute

2004-01-07  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-status.c
	(has_item_to_the_right): add to deal with pack-end fun.
	(impl_bonobo_ui_sync_status_state): upd. logic.

2003-12-30  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-control.c (impl_Bonobo_Control_activate): Ahem,
	flip my reversed condition.

2003-12-29  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-control.c (impl_Bonobo_Control_activate): Fixed
	the emission logic; actually test against the old activation
	state.  Also, call bonobo_control_activate_notify() to notify the
	control frame.

2003-12-15  JP Rosevear <jpr@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c (toolbar_build_widget): do a
	memmove instead of a strcpy because the strings overlap

2003-12-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar.c
	(size_allocate_helper): fix bug where item + <small item>
	where small item was < sizeof expander popup would cause
	the last 2 items to always hit the expander. Cleaned up
	logic, simplified a tad. X#49949

2003-12-08  Michael Meeks  <michael@ximian.com>

	* Version 2.5.1

	* bonobo/bonobo-control.c (bonobo_control_do_popup_full),
	(bonobo_control_do_popup_path): split out / add a more
	useful API variant.

2003-12-05  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* bonobo/bonobo-file-selector-util.c: (response_cb),
	(create_gtk_selector): Replace GtkFileSelection with
	GtkFileChooser.

	* samples/compound-doc/container/container-filesel.c:
	(container_request_file):
	* samples/compound-doc/container/container-filesel.h:
	* samples/compound-doc/container/container-menu.c:
	(load_response_cb), (save_response_cb), (verb_FileSaveAs_cb),
	(verb_FileLoad_cb): ditto.

2003-12-06  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): add keys test.
